<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="start"
    android:padding="8dp"
    android:orientation="vertical">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/get1_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get1_button" />

        <Button
            android:id="@+id/get2_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get2_button" />

        <Button
            android:id="@+id/get3_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get3_button" />

        <Button
            android:id="@+id/post_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_button" />

    </LinearLayout>


    <TextView
        android:id="@+id/text_view_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:padding="24dp" />

<!--    <view class="androidx.recyclerview.widget.RecyclerView"-->
<!--        android:id="@+id/record_recycler_view"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent">-->

<!--    </view>-->

</LinearLayout>