<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_constraint_layout"
    android:background="@android:color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/item_user_img"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/user_img"
        app:layout_constraintBottom_toTopOf="@+id/item_full_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/item_constraint_layout"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_full_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:maxLines="1"
        android:text="@string/full_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/item_force_sensitive_img"
        app:layout_constraintRight_toLeftOf="@id/item_user_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_user_img" />

    <TextView
        android:id="@+id/item_affiliation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:maxLines="1"
        android:text="@string/affiliation"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/item_birth_date"
        app:layout_constraintEnd_toStartOf="@+id/item_force_sensitive_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_full_name" />

    <TextView
        android:id="@+id/item_birth_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:maxLines="1"
        android:text="@string/birth_date"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/item_force_sensitive_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_affiliation" />

    <TextView
        android:id="@+id/item_force_sensitive"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:maxLines="1"
        android:text="@string/force_sensitive"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/item_force_sensitive_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_birth_date" />

    <TextView
        android:id="@+id/bio"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:text="@string/bio"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_force_sensitive"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/item_force_sensitive_img"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="4dp"
        android:contentDescription="@string/force_sensitive_img"
        app:layout_constraintEnd_toEndOf="@+id/item_constraint_layout"
        app:layout_constraintTop_toBottomOf="@+id/item_birth_date" />

</androidx.constraintlayout.widget.ConstraintLayout>