<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/user_img"
        android:layout_width="71dp"
        android:layout_height="71dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/user_img"
        app:layout_constraintBottom_toBottomOf="@+id/constraint_layout"
        app:layout_constraintStart_toStartOf="@+id/constraint_layout"
        app:layout_constraintTop_toTopOf="@+id/constraint_layout" />

    <TextView
        android:id="@+id/full_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:maxLines="1"
        android:text="@string/full_name"
        android:textAlignment="viewStart"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/affiliation"
        app:layout_constraintEnd_toStartOf="@+id/force_sensitive_img"
        app:layout_constraintLeft_toRightOf="@+id/force_sensitive_img"
        app:layout_constraintRight_toLeftOf="@id/user_img"
        app:layout_constraintStart_toEndOf="@+id/user_img"
        app:layout_constraintTop_toTopOf="@+id/constraint_layout" />

    <TextView
        android:id="@+id/affiliation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:maxLines="1"
        android:text="@string/affiliation"
        android:textAlignment="viewStart"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/birth_date"
        app:layout_constraintEnd_toStartOf="@+id/force_sensitive_img"
        app:layout_constraintStart_toEndOf="@+id/user_img"
        app:layout_constraintTop_toBottomOf="@+id/full_name" />

    <TextView
        android:id="@+id/birth_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:maxLines="1"
        android:text="@string/birth_date"
        android:textAlignment="viewStart"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/constraint_layout"
        app:layout_constraintEnd_toStartOf="@+id/force_sensitive_img"
        app:layout_constraintStart_toEndOf="@+id/user_img"
        app:layout_constraintTop_toBottomOf="@+id/affiliation" />


    <ImageView
        android:id="@+id/force_sensitive_img"
        android:layout_width="71dp"
        android:layout_height="71dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/force_sensitive_img"
        app:layout_constraintBottom_toBottomOf="@+id/constraint_layout"
        app:layout_constraintEnd_toEndOf="@+id/constraint_layout"
        app:layout_constraintTop_toTopOf="@+id/constraint_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>